# activesg-gym-scrapper

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml
project/: docker-compose.yml  run.sh
project/database/: Telemetry.sql
project/src/: __init__.py  main.py  test.json
project/src/assets/: SportSGSportFacilitiesGEOJSON.geojson:Zone.Identifier  activesgGymAddr.txt
project/src/controller/: __init__.py  gymcapacity.py  weather.py
project/src/database/: __init__.py  database.py  table.py
project/src/error/: error.py
project/src/httprequests/: __init__.py  sendRequest.py  send_request.py
project/src/logger/: logger.py
project/src/model/: __init__.py  model.py
project/src/services/: __init__.py  services.py
project/src/web/: __init__.py  scrapping.py
project/src/worker/: worker.py
project/tests/: test_database.py  test_error.py  test_gymcapacity.py  test_scrapping.py  test_send_request.py  test_services.py  test_weather.py
