[project]
name = "activesg-gym-scrapper"
version = "0.1.0"
description = "ActiveSG gym capacity and weather scraper."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4==4.12.3",
    "geopy==2.4.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "pyvirtualdisplay==3.0",
    "requests==2.32.3",
    "selenium==4.27.1",
    "sqlalchemy==2.0.37",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--cov=project/src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["project/src"]
testpaths = ["project/tests"]

[tool.coverage.run]
omit = [
    "project/src/__init__.py",
    "project/src/*/__init__.py",
    "project/src/main.py",
    "project/src/model/model.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"project/src/**/*.py" = ["E402"]
